dr-internal.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-github
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: github
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: api.github.com
